--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div>
       <nav id="menu-ui" class="menu-ui">
         <a href="#" class="active" id="filter-all">Mostrar todo</a>
-        <a href="crimbaja.html" id="filter-baja">Criminalidad Baja</a>
-        <a href="crimmedia.html" id="filter-media">Criminalidad Media</a>
-        <a href="crimalto.html" id="filter-alta">Criminalidad Alta</a>
-        <a href="calormapa.html" id="filter-ubicación">Ubicación</a>
+        <a href="crimbaja.html" id="filter-baja">Criminalidad Baja  <span class="baja">xx</span></a>
+        <a href="crimmedia.html" id="filter-media">Criminalidad Media  <span class="media">xx</span></a>
+        <a href="crimalto.html" id="filter-alta">Criminalidad Alta  <span class="alta">xx</span></a>
+        <a href="index.html" id="filter-ubicación">Ubicación</a>
        
       </nav>
     </div>
